2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* Merge z80n branch.

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr88714.c:
	  Bug #2949 wasn't a bug, just lack of RAM resulting in a stack overflow.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve pointer write on rematerialized stack location.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-950511-1.c:
	  Fix bug #2938.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve pointer read on rematerialized stack location.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-20000113-1.c:
	  Fix bug #2937.

2020-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2995.c:
	  Disable test for mcs51, pdk until I find out how to place space_a segment in RAM in a regression test.

2020-04-25 Philipp Klaus Krause <pkk AT spth.de>

	* .version:
	  Bump version post 4.0.0-release.
	* src/SDCCsymt.c,
	  src/SDCCopt.c,
	  src/SDCCmem.c,
	  support/regression/tests/bug-2995.c:
	  Fix bug #2995.

2020-04-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_auto_yx.c:
	  Check for either __PPC__ or __POWERPC__

2020-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_auto_yx.c:
	  Disable test for GCC on PPC instead of clang

2020-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2993.c:
	  Disable test for mcs51-huge (bug #2994).
	* support/regression/tests/callee_saves.c:
	  Fix macro spelling to enable for mcs51.

2020-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2993.c:
	  Fix bug #2993.
